# opengl_journey

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md  vcpkg.json
include/learn_opengl/: camera.hpp  file_system.hpp  mesh.hpp  model.hpp  shader.hpp
shaders/: fragment.glsl  light_fragment.glsl  light_vertex.glsl  mirror_fragment.glsl  outline_vertex.glsl  quad_fragment.glsl  quad_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
src/: camera.cpp  camera.hpp  file_system.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  shader.cpp  shader.h  shader.hpp
src/shaders/: fragment.glsl  vertex.glsl
